fixed "works" overlay on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -320,7 +320,7 @@ nav {
     border-radius: 100%;
     background-image: linear-gradient(#1bd497 10%, #1bd497);
     filter: blur(250px);
-    transition: all 400ms ease-out;
+    transition: all 300ms ease-out;
     position: fixed;
     pointer-events: none;
     left: 0;
